[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
chrono = "0.4.41"
colored = "3.0.0"
lazy_static = "1.4.0"
proctitle = "0.1.1"
protobuf = "3.7.2"
rand = "0.9.2"
regex = "1.10"
serde = {version="1.0.228" , features=["derive"]}
serde_json = "1.0"
sysinfo = "0.37.2"
tokio = {version="1.47.1" , features=["full"]}
toml = "0.9.8"
lru = "0.12"

